[project]
name = "dagster_dbt_bug"
version = "1.0.0"
description = "Reproducing Dagster DBT bug"
requires-python = "==3.11.13"
dependencies = [
    "dagster==1.11.11",
    "dagster-webserver>=1.11.0",
    "dbt-core==1.7.12",
    "dagster-duckdb>=0.18",
    "dagster-dbt>=0.18",
    "dbt-duckdb>=1.0.0",
]

[tool.dagster]
module_name = "dagster_dbt_bug"
